--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.no-transition {
+	view-transition-name: none;
+}
+@media (prefers-reduced-motion) {
+	::view-transition-group(*),
+	::view-transition-old(*),
+	::view-transition-new(*) {
+		animation: none !important;
+	}
+}
+
+.navbar {
+	view-transition-name: 'navbar';
+}
